--- a/src/Volvox.Helios.Web/Views/Shared/_CookieConsentPartial.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_CookieConsentPartial.cshtml
@@ -11,7 +11,7 @@
     <nav id="cookieConsent" class="navbar navbar-expand navbar-light bg-light fixed-bottom" role="alert">
         <div class="container">
             <div class="navbar-collapse collapse">
-                <p class="navbar-text">
+                <p class="navbar-text mb-0">
                     By using this website, you agree to our use of cookies.
                 </p>
                 <div class="navbar-nav ml-auto">
