--- a/src/Volvox.Helios.Web/wwwroot/css/light-theme.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/light-theme.css
@@ -1,3 +1,9 @@
-﻿footer{
+﻿.module-enabler{
+  border-color: var(--color-gray2);
+  color: var(--color-gray2);
+  cursor: pointer;
+}
+
+footer{
   background: #eee;
 }
