--- a/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
@@ -19,6 +19,24 @@ hr{
   background-color: var(--color-deep-dark);
 }
 
-footer{
+.dx-texteditor-input {
+  background: var(--color-deep-dark);
+  color: var(--color-gray2);
+}
+.dx-texteditor.dx-editor-outlined {
+  border-color: #797878;
+}
+
+.module-enabler.disabled {
+  background: var(--color-deep-dark);
+  cursor: pointer;
+  z-index: inherit !important;
+}
+
+.list-group-item{
+  background: var(--color-deep-dark);
+}
+
+footer {
   background: var(--color-deep-dark);
 }
