--- a/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>@ViewData["Title"]</h2>
-<hr /> 
+<hr />
 
 <div class="row">
     <div class="col-md-12">
@@ -25,50 +25,50 @@
                             </label>
                             <label for="disabledBtn" class="btn pr-4 pl-4 module-enabler @(Model.Enabled ? "disabled" : "active")">
                                 Off
-                                <input id="disabledBtn" type="radio" name="Enabled" class="d-none" value="false"@(Model.Enabled ? "" : "checked")>
+                                <input id="disabledBtn" type="radio" name="Enabled" class="d-none" value="false" @(Model.Enabled ? "" : "checked")>
                             </label>
                         </div>
                     </div>
 
                     @*<div class="col-12">
-                        <div asp-validation-summary="All" class="text-danger"></div>
-                        <input type="hidden" name="ChannelId" />
-                        <h4>Stream Announcer</h4>
-                        <div class="form-group">
-                            <label asp-for="ChannelId"></label>
-                            <select asp-for="ChannelId" asp-items="Model.Channels" id="channels" class="form-control"></select>
-                            <span asp-validation-for="ChannelId" class="text-danger"></span>
-                        </div>
-                        <div class="form-check form-group">
-                            <input asp-for="ChannelSettings.Enabled" class="form-check-input" />
-                            <label asp-for="ChannelSettings.Enabled" class="form-check-label"></label>
-                            <span asp-validation-for="ChannelSettings.Enabled" class="text-danger"></span>
-                        </div>
-                        <div class="form-check form-group">
-                            <input asp-for="ChannelSettings.RemoveMessages" class="form-check-input" />
-                            <label asp-for="ChannelSettings.RemoveMessages" class="form-check-label"></label>
-                            <span asp-validation-for="ChannelSettings.RemoveMessages" class="text-danger"></span>
-                        </div>
+                            <div asp-validation-summary="All" class="text-danger"></div>
+                            <input type="hidden" name="ChannelId" />
+                            <h4>Stream Announcer</h4>
+                            <div class="form-group">
+                                <label asp-for="ChannelId"></label>
+                                <select asp-for="ChannelId" asp-items="Model.Channels" id="channels" class="form-control"></select>
+                                <span asp-validation-for="ChannelId" class="text-danger"></span>
+                            </div>
+                            <div class="form-check form-group">
+                                <input asp-for="ChannelSettings.Enabled" class="form-check-input" />
+                                <label asp-for="ChannelSettings.Enabled" class="form-check-label"></label>
+                                <span asp-validation-for="ChannelSettings.Enabled" class="text-danger"></span>
+                            </div>
+                            <div class="form-check form-group">
+                                <input asp-for="ChannelSettings.RemoveMessages" class="form-check-input" />
+                                <label asp-for="ChannelSettings.RemoveMessages" class="form-check-label"></label>
+                                <span asp-validation-for="ChannelSettings.RemoveMessages" class="text-danger"></span>
+                            </div>
 
-                        <h4 class="mt-4">Streamer Role</h4>
-                        <div class="form-check form-group">
-                            <input asp-for="StreamerRoleEnabled" class="form-check-input" />
-                            <label asp-for="StreamerRoleEnabled" class="form-check-label"></label>
-                            <span asp-validation-for="StreamerRoleEnabled" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="RoleId"></label>
-                            <select asp-for="RoleId" asp-items="Model.Roles" id="roles" class="form-control"></select>
-                            <span asp-validation-for="RoleId" class="text-danger"></span>
-                        </div>
-                    </div>*@
+                            <h4 class="mt-4">Streamer Role</h4>
+                            <div class="form-check form-group">
+                                <input asp-for="StreamerRoleEnabled" class="form-check-input" />
+                                <label asp-for="StreamerRoleEnabled" class="form-check-label"></label>
+                                <span asp-validation-for="StreamerRoleEnabled" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="RoleId"></label>
+                                <select asp-for="RoleId" asp-items="Model.Roles" id="roles" class="form-control"></select>
+                                <span asp-validation-for="RoleId" class="text-danger"></span>
+                            </div>
+                        </div>*@
                 </div>
 
                 <div class="row mt-4 border border-gray2 rounded">
                     <div class="col-12 pt-3">
                         <h4>Stream Announcer</h4>
                         <hr />
-                        @(Model.ChannelId)
+                        @(Model.ChannelId) | @Model.GuildId | @Model.ChannelSettings.RemoveMessages
                         <label asp-for="ChannelId"></label>
                         <input type="hidden" name="ChannelId" />
                         <div id="selectChannel"></div>
@@ -174,7 +174,7 @@
             });
         };
 
-        $("#channels").on('change',
+        @*$("#channels").on('change',
             function() {
                 const channelId = $('#channels').val();
                 const guildId = '@Model.GuildId';
@@ -183,31 +183,54 @@
                     $('#ChannelSettings_Enabled').prop('checked', response.enabled);
                     $('#ChannelSettings_RemoveMessages').prop('checked', response.removeMessages);
                 });
-            });
+            });*@
+
+
         var src = '@(Html.Raw(Json.Serialize(Model.Channels)))';
-        console.log(JSON.parse(src));
+        var selectChannelVal = '@Model.ChannelId';
+        if (selectChannelVal == '0')
+            selectChannelVal = '@Model.Channels.FirstOrDefault().Value';
+        // console.log(JSON.parse(src));
         $('#selectChannel').dxSelectBox({
             dataSource: JSON.parse('@(Html.Raw(Json.Serialize(Model.Channels)))'),
             searchEnabled: true,
             valueExpr: "value",
             displayExpr: "text",
-            value: '@Model.ChannelId',
+            value: selectChannelVal,
             onInitialized: (e) => {
-                $('input[name="ChannelId"]').val('@Model.ChannelId');
+                $('input[name="ChannelId"]').val(selectChannelVal);
             },
             onValueChanged: (e) => {
+                var channelId = e.value;
+                var guildId = '@Model.GuildId';
+
+                $.when(getChannelSettingsAnnouncer(guildId, channelId)).done(function (response) {
+                    if (response.enabled) {
+                        $('#rmEnabledBtn').prop('checked', response.enabled).parent().toggleClass('active disabled');
+                        $('#rmDisabledBtn').prop('checked', !response.enabled).parent().toggleClass('active disabled');
+                    } else {
+                        $('#rmEnabledBtn').prop('checked', !response.enabled).parent().toggleClass('active disabled');
+                        $('#rmDisabledBtn').prop('checked', response.enabled).parent().toggleClass('active disabled');
+                    }
+                    console.log(response, 'changed');
+                });
+
                 $('input[name="ChannelId"]').val(e.value);
             }
         });
 
+
+        var selectRoleVal = '@Model.RoleId';
+        if (selectRoleVal = '0')
+            selectRoleVal = '@Model.Roles.FirstOrDefault().Value';
         $('#selectRole').dxSelectBox({
             dataSource: JSON.parse('@(Html.Raw(Json.Serialize(Model.Roles)))'),
             searchEnabled: true,
             valueExpr: "value",
             displayExpr: "text",
-            value: '@Model.RoleId',
+            value: selectRoleVal,
             onInitialized: (e) => {
-                $('input[name="RoleId"]').val('@Model.RoleId');
+                $('input[name="RoleId"]').val(selectChannelVal);
             },
             onValueChanged: (e) => {
                 $('input[name="RoleId"]').val(e.value);
