--- a/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/StreamerSettings.cshtml
@@ -187,9 +187,10 @@
 
 
         var src = '@(Html.Raw(Json.Serialize(Model.Channels)))';
-        var selectChannelVal = '@Model.ChannelId';
-        if (selectChannelVal == '0')
+        var selectChannelVal = @Model.ChannelId;
+        if (selectChannelVal == 0)
             selectChannelVal = '@Model.Channels.FirstOrDefault().Value';
+        console.log(selectChannelVal);
         // console.log(JSON.parse(src));
         $('#selectChannel').dxSelectBox({
             dataSource: JSON.parse('@(Html.Raw(Json.Serialize(Model.Channels)))'),
