--- a/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Settings/Index.cshtml
@@ -50,7 +50,7 @@
                 Poll Manager
             </div>
             <div class="w-100 bg-skyblue module-enabled-popover">
-                <strong>0 Polls available</strong>
+                <strong>@Model.PollCount Polls</strong>
             </div>
             <div class="card-body pt-4 pb-4">
                 <h5 class="card-title mb-0">
